--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-images-uploading": "^3.1.2",
+    "react-loader-spinner": "^4.0.0",
     "react-reader": "^0.20.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
